sandbox/output
QualityAndSellInCalculator.java:19: error: abstract methods cannot have a body
    public abstract void updateQualityAndSellIn(Item item) {
                         ^
1 error
Error: Could not find or load main class TexttestFixture
